--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
     <h1 id="title">Brain Boyz</h1>
     <h2 id="subtitle">
     Your Guide to Science Fairs</h1>
-    <h3 id="subtext">We hope to tell you all about science fairs, from the brainstroming to the medal winning, and everything in between.</h3>
+    <h3 id="subtext">We hope to tell you all about science fairs, from the brainstorming to the medal-winning, and everything in between.</h3>
     <div>
       <h2>About Us</h2>
       <p>Welcome to our team! We are a nonprofit organization that teaches students about science fairs. We are three 8th graders at T.H Rogers Middle School. During the 2023-2024 academic year, we competed in SEFH and TXSEF and placed 2nd and 3rd in our category, Robotics and Intelligent Machines, respectively.</p>
@@ -32,10 +32,10 @@
       <div class="team-member">
         <img src="/assets/images/taylor.png" alt="Taylor Anthony">
         <h2>Taylor Anthony</h2>
-        <p>I am a multisport athlete and my main sport is baseball. I do science fair for fun and I am determined to win.  </p>
+        <p>I am a multisport athlete and my main sport is baseball. I do science fairs for fun and I am determined to win.</p>
       </div>
       <div class="team-member">
-        <img src="/assets/images/ryan.jpeg" alt="Ryan Zhang">
+        <img src="/assets/images/ryan.jpg" alt="Ryan Zhang">
         <h2>Ryan Zhang</h2>
         <p>I enjoy math and have attended numerous math competitions. I also enjoy swimming.</p>
       </div>
