--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,7 @@
         <p>I enjoy coding and game development. I have experience with robotics like VEX and I enjoy swimming.</p>
       </div>
       <div class="team-member">
-        <img src="/assets/images/taylor.png" alt="Taylor Anthony">
+        <img src="/assets/images/taylor.jpg" alt="Taylor Anthony">
         <h2>Taylor Anthony</h2>
         <p>I am a multisport athlete and my main sport is baseball. I do science fairs for fun and I am determined to win.</p>
       </div>
