--- a/bookings/index.html
+++ b/bookings/index.html
@@ -14,11 +14,11 @@
   <div id="container">
     <h1 id="title">Brain Boyz</h1>
     <h2 id="subtitle">Your Guide to Science Fairs</h1>
-    <h3 id="subtext">We hope to tell you all about science fairs, from the brainstroming to the medal winning, and everything in between.</h3>
+    <h3 id="subtext">We hope to tell you all about science fairs, from the brainstorming to the medal-winning, and everything in between.</h3>
 
     <div>
       <h2>Book Now</h2>
-      <p>Please book a consultation with us if you have any additional questions, we will try and answer them to the best of our ability.</p>
+      <p>Please book a consultation with us if you have any additional questions, we will try to answer them to the best of our ability.</p>
     </div>
 
     <!-- Calendly inline widget begin -->
