--- a/mission/index.html
+++ b/mission/index.html
@@ -14,11 +14,11 @@
   <div id="container">
     <h1 id="title">Brain Boyz</h1>
     <h2 id="subtitle">Your Guide to Science Fairs</h1>
-    <h3 id="subtext">We hope to tell you all about science fairs, from the brainstroming to the medal winning, and everything in between.</h3>
+    <h3 id="subtext">We hope to tell you all about science fairs, from the brainstorming to the medal-winning, and everything in between.</h3>
 
     <div>
       <h2>Our Mission</h2>
-      <p>We believe that science fairs offer a great opportunity to learn about science in many different fields. Science fairs help students foster skills like research, building, and coding skills that are beneficial in many different fields of STEM.</p>
+      <p>We believe that science fairs offer a great opportunity to learn about science in various fields. Science fairs help students foster skills like research, building, and coding skills that are beneficial in many fields of STEM.</p>
     </div>
   </div>
 
