--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 id="title">Brain Boyz</h1>
     <h2 id="subtitle">Your Guide to Science Fairs</h1>
     <h3 id="subtext">We hope to tell you all about science fairs, from the brainstorming to the medal-winning, and everything in between.</h3>
-    <h3>For more about us, visit <a href="/about/index.html">about us</a>.</h3>
+    <h3>For more about our team, visit <a href="/about/index.html">about us</a>.</h3>
     <br>
     <img style="max-width: 100%;" src="/assets/images/flyer.png" alt="Brain Boyz flyer">
   </div>
